# dockerfile-templates

poetry-fastapi/: Dockerfile  docker-compose.yml  pyproject.toml
